# larc-crates

./: Cargo.toml  README.md  c4-context-light-architects.html
crates/: la-lightsquad-PROPOSAL.md
crates/la-ayinspan/: Cargo.toml
crates/la-ayinspan/benches/: batch_bench.rs
crates/la-ayinspan/src/: actor.rs  batch.rs  decision.rs  emit.rs  error.rs  hierarchy.rs  lib.rs  metrics.rs  observe.rs  outcome.rs  propagation.rs  span.rs  strand.rs  turn.rs
crates/la-ayinspan/src/semconv/: mod.rs
crates/la-ayinspan/tests/: integration.rs
crates/la-benchmark/: Cargo.toml
crates/la-benchmark/src/: error.rs  lib.rs  longmemeval.rs  report.rs  runner.rs
crates/la-gateway/: Cargo.toml
crates/la-gateway/src/: json_rpc.rs  lib.rs  observe.rs
crates/la-lightsquad/: Cargo.toml
crates/la-lightsquad/src/: archetype.rs  contract.rs  error.rs  events.rs  executor.rs  gate.rs  gate_dimension.rs  lib.rs  program.rs  projection.rs
crates/la-lightsquad/tests/: wire_compat.rs
crates/la-loops/: Cargo.toml
crates/la-loops/src/: lib.rs
crates/la-mcp/: Cargo.toml
crates/la-mcp/src/: error.rs  handler.rs  http_transport.rs  lib.rs  stdio_transport.rs  transport.rs  ws_transport.rs
crates/la-soulstrand/: Cargo.toml
crates/la-soulstrand/src/: builder.rs  cached.rs  client.rs  embedding.rs  error.rs  graph.rs  helix.rs  lib.rs  promotion.rs  retrieval.rs  sqlite.rs  tier.rs  types.rs
crates/la-soulvault/: Cargo.toml
crates/la-soulvault/src/: client.rs  embedding.rs  graph.rs  helix.rs  lib.rs  promotion.rs  vault.rs
crates/larc-ayinspan/: Cargo.toml
crates/larc-ayinspan/benches/: batch_bench.rs
crates/larc-ayinspan/src/: batch.rs  emit.rs  lib.rs  observe.rs  outcome.rs  span.rs  strand.rs  turn.rs
crates/larc-ayinspan/src/semconv/: lasdlc.rs
crates/larc-ayinspan/tests/: integration.rs
crates/larc-benchmark/: Cargo.toml
crates/larc-benchmark/src/: error.rs  lib.rs  report.rs
crates/larc-gateway/: Cargo.toml
crates/larc-gateway/src/: config.rs  error.rs  handler.rs  lib.rs  observe.rs  sibling_id.rs  transport.rs
crates/larc-keys/: Cargo.toml  Dockerfile  fly.toml
crates/larc-keys/src/: auth.rs  config.rs  db.rs  error.rs  main.rs  models.rs
crates/larc-keys/src/handlers/: keys.rs  mcp.rs  mod.rs  users.rs
crates/larc-lightsquad/: Cargo.toml
crates/larc-lightsquad/src/: archetype.rs  critic.rs  dispatcher.rs  error.rs  events.rs  evidence.rs  executor.rs  gate.rs  gate_dimension.rs  lib.rs  pipeline.rs  plan.rs  program.rs  task.rs  tdd.rs  tool_descriptor.rs  worktree.rs
crates/larc-lightsquad/tests/: wire_compat.rs
crates/larc-loops/: Cargo.toml
crates/larc-loops/src/: lib.rs
crates/larc-mesh-types/: Cargo.toml
crates/larc-mesh-types/src/: lib.rs
crates/larc-proxy/: Cargo.toml
crates/larc-proxy/src/: config.rs  main.rs  proxy.rs
crates/larc-soulvault/: Cargo.toml
crates/larc-soulvault/src/: cached.rs  embedding.rs  error.rs  graph.rs  helix.rs  lib.rs  ordering.rs  promotion.rs  research_report.rs  retrieval.rs  types.rs  vault.rs
