[workspace]
resolver = "2"
members = [
    "crates/larc-soulvault",
    "crates/larc-benchmark",
    "crates/larc-gateway",
    "crates/larc-ayinspan",
    "crates/larc-lightsquad",
    "crates/larc-loops",
    "crates/larc-mesh-types",
]

[workspace.package]
version = "0.1.1"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/TheLightArchitects/larc-crates"
rust-version = "1.85"

[workspace.dependencies]
# Internal — `version` is used by `cargo publish`; `path` is used for local builds.
larc-soulvault = { path = "crates/larc-soulvault", version = "0.1.1" }
larc-benchmark = { path = "crates/larc-benchmark", version = "0.1.1" }
larc-gateway = { path = "crates/larc-gateway", version = "0.1.1" }
larc-ayinspan = { path = "crates/larc-ayinspan", version = "0.1.1" }
larc-lightsquad = { path = "crates/larc-lightsquad", version = "0.1.1" }
larc-loops = { path = "crates/larc-loops", version = "0.1.1" }
larc-mesh-types = { path = "crates/larc-mesh-types", version = "0.1.1" }

# Shared
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
thiserror = "2"
tracing = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }