[workspace]
resolver = "2"
members = [
    "crates/larc-soulvault",
    "crates/larc-benchmark",
    "crates/larc-gateway",
    "crates/larc-ayinspan",
    "crates/larc-lightsquad",
    "crates/larc-loops",
    "crates/larc-proxy",
    "crates/larc-keys",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/TheLightArchitects/larc-crates"
rust-version = "1.85"

[workspace.dependencies]
# Internal
larc-soulvault = { path = "crates/larc-soulvault" }
larc-benchmark = { path = "crates/larc-benchmark" }
larc-gateway = { path = "crates/larc-gateway" }
larc-ayinspan = { path = "crates/larc-ayinspan" }
larc-lightsquad = { path = "crates/larc-lightsquad" }
larc-loops = { path = "crates/larc-loops" }

# Shared
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
thiserror = "2"
tracing = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }