[package]
name = "la-ayinspan"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Observability span types for the Light Architects platform — TraceSpan, Actor, TraceOutcome, W3C traceparent propagation"
keywords = ["observability", "tracing", "span", "traceparent", "ayin"]
categories = ["development-tools::debugging", "data-structures"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]