[package]
name = "la-benchmark"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Domain-agnostic performance benchmark framework for knowledge retrieval systems"
keywords = ["benchmark", "retrieval", "evaluation", "longmemeval", "nlp"]
categories = ["development-tools::testing", "science"]

[features]
default = []
longmemeval = ["dep:csv", "dep:flate2"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

# LongMemEval dataset
csv = { version = "1", optional = true }
flate2 = { version = "1", optional = true }

[dev-dependencies]
tokio = { workspace = true }