[package]
name = "la-lightsquad"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Structured Delivery Protocol — archetype framework, delivery vocabulary, and executor traits for autonomous squad orchestration"
keywords = ["squad", "delivery", "archetype", "gate", "orchestration"]
categories = ["development-tools", "asynchronous"]

[features]
default = []
# Delivery traits (Executor, ReviewGate, WaveDispatcher, WorktreeManager)
dispatch = ["dep:tokio", "dep:async-trait"]
# Convenience: everything
full = ["dispatch"]

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { version = "0.1", optional = true }
tokio = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }