[package]
name = "la-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Domain-agnostic MCP server framework with multi-transport and squad-aware routing"
keywords = ["mcp", "model-context-protocol", "server", "ai", "agent"]
categories = ["network-programming", "web-programming", "asynchronous"]

[features]
default = ["stdio"]
stdio = []
http = ["dep:axum", "dep:tower", "dep:tower-http"]
websocket = ["dep:axum", "dep:tokio-tungstenite"]
lightsquad = []

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }

# HTTP/SSE transport
axum = { version = "0.8", optional = true }
tower = { version = "0.5", optional = true }
tower-http = { version = "0.6", optional = true }

# WebSocket transport
tokio-tungstenite = { version = "0.26", optional = true }

[dev-dependencies]