[package]
name = "larc-benchmark"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Domain-agnostic performance benchmark framework for knowledge retrieval systems"
keywords = ["benchmark", "retrieval", "evaluation", "longmemeval", "nlp"]
categories = ["development-tools::testing", "science"]

[features]
default = []
# LongMemEval dataset loading (CSV support planned for future release).
longmemeval = []

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }