[package]
name = "larc-gateway"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Light Architects gateway interface — transport, MCP handler, and protocol types"
keywords = ["mcp", "ai", "agents", "gateway", "protocol"]
categories = ["asynchronous", "network-programming"]

[features]
default = ["ayin"]
# MCP server handler traits (SiblingHandler, HandlerError)
mcp = []
# AYIN observability: re-exports la-ayinspan + ObservableTransport (default)
ayin = ["dep:larc-ayinspan"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = "0.1"
larc-ayinspan = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }