[package]
name        = "larc-keys"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true
description = "Light Architects API key service — user management, key issuance, MCP auth"
keywords    = ["api-key", "auth", "axum", "mcp", "lightarchitects"]
categories  = ["authentication", "web-programming::http-server"]
readme      = "README.md"

[[bin]]
name = "larc-keys"
path = "src/main.rs"

[dependencies]
# Web
axum               = { workspace = true }
tower-http         = { workspace = true }
tokio              = { workspace = true }

# DB
rusqlite           = { workspace = true }

# Serde
serde              = { workspace = true }
serde_json         = { workspace = true }

# Error handling
anyhow             = { version = "1" }
thiserror          = { workspace = true }

# Logging
tracing            = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# IDs / time
uuid               = { workspace = true }
chrono             = { workspace = true }

# Crypto
hmac               = { workspace = true }
sha2               = { workspace = true }
rand               = { workspace = true }
hex                = "0.4"

# Auth
jsonwebtoken       = "9"
argon2             = "0.5"

[lints.clippy]
pedantic                = { level = "deny", priority = -1 }
must_use_candidate      = "allow"
module_name_repetitions = "allow"
unwrap_used             = "deny"
expect_used             = "deny"
panic                   = "deny"
